# diagnosis_prediction

./: .gitignore  README.md  data_loader.py  evaluator.py  evidence_encoder.py  helper_functions.py  main.py  performance_evaluator.py  pipeline_builder.py  pyproject.toml  requirements.txt
data/: icd10_chapters_definition.csv
data_exploration/: raw_data_exploration.html  transformed_data_exploration.html
diagnosis_prediction/: data_exploration.ipynb  data_exploration.py  data_loader.py  evidence_encoder.py  global_variables.py  helper_functions.py  main.py  performance_evaluator.py  pipeline_builder.py
results/: best_parameters.csv  grid_search.csv  train_and_evaluate.csv
